# binserve

./: .gitignore  BENCHMARKS.md  Cargo.toml  Dockerfile  LICENSE  README.md  binserve.json
.cargo/: config
.github/: FUNDING.yml
.github/workflows/: CICD.yml  build.yml  linux-rust.yml  macos-rust.yml  windows-rust.yml
src/: config.rs  error.rs  error_pages.rs  main.rs  security.rs  serve.rs  setup_static.rs  template.rs
src/cli/: banner  interface.rs  messages.rs  mod.rs
src/core/: config.json  config.rs  engine.rs  files.rs  mod.rs  routes.rs  server.rs  templates.rs  tls.rs  watcher.rs
src/starter/: 404.html  header.hbs  index.html  usage.hbs
src/starter/assets/css/: styles.css
src/template/: content_buffer.rs
static/: 404.html  index.html
tools/: install.sh
