[package]
name = "binserve"
version = "0.1.0"
authors = ["mufeedvh <mufeedvh@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3.5"
env_logger = "0.7.1"

actix-web = "3"
actix-files = "0.4.0"

serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"

handlebars = "3.5.0"

lazy_static = "1.4.0"

minify = "1.2.0"

[profile.release]
lto = true
