[package]
name = "binserve"
version = "0.2.1"
edition = "2021"

[dependencies]
actix-files = "0.6.0"
actix-web = { version = "4.5.1", features = ["rustls-0_22"] }
actix-web-lab = "0.20.2"
ahash = "0.8.8"
anyhow = "1.0.57"
clap = "4.5.1"
colored = "2.0.0"
compact_str = "0.7.1"
dashmap = "5.5.3"
env_logger = "0.11.2"
etag = { version = "4.0.0", features = ["std"] }
handlebars = "5.1.0"
jwalk = "0.8.1"
minify-html-onepass = "0.15.0"
new_mime_guess = "4.0.1"
notify-debouncer-mini = "0.4.1"
num_cpus = "1.13.1"
once_cell = { version = "1.12.0", features = ["parking_lot"] }
parking_lot = "0.12.1"
rustls = "0.22.2"
rustls-pemfile = "2.1.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
lto = "thin"
debug = false
incremental = false
overflow-checks = false
